Remote job deletion